# cslop

./: README.md  commit-template.md  meson.build  version.h.in
include/: archive.h  cli.h  cslop.h  format.h
src/: main.c
src/cli/: archive.c  cli.c  format.c
